--- a/src/chat/templates/chat/room.html
+++ b/src/chat/templates/chat/room.html
@@ -1,4 +1,4 @@
-<!-- chat/templates/chat/room.html -->
+{% load static %}
 <!DOCTYPE html>
 <html>
 <head>
@@ -10,10 +10,11 @@
     <input id="chat-message-input" type="text" size="100"/><br/>
     <input id="chat-message-submit" type="button" value="Send"/>
 </body>
+<script src="{% static 'reconnecting-websocket.js' %}"></script>
 <script>
     var roomName = {{ room_name_json }};
 
-    var chatSocket = new WebSocket(
+    var chatSocket = new ReconnectingWebSocket(
         'ws://' + window.location.host +
         '/ws/chat/' + roomName + '/');
 
